tests/baselines/reference/derivedStructCanOverrideFunctionMembers.errors.txt
tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructCanOverrideFunctionMembers.ts(19,8): error TS8006: Struct 'Derived' incorrectly extends base struct 'Base':
  Derived Struct 'Derived' cannot override base struct 'Base' member variable 'a'.


==== tests/cases/conformance/structs/members/inheritanceAndOverriding/derivedStructCanOverrideFunctionMembers.ts (1 errors) ====
    // doc 2.3
    // derived struct can only override base struct's instance function members and static property members
    
    var x: { foo: string; }
    var y: { foo: string; bar: string; }
    
    struct Base {
        a: typeof x;
        b(a: typeof x) { }
        d: (a: typeof x) => void;
    
        static r: typeof x;
        static s(a: typeof x) { }
        static u: (a: typeof x) => void;
    
        constructor(a: typeof x) { }
    }
    
    struct Derived extends Base {
           ~~~~~~~
!!! error TS8006: Struct 'Derived' incorrectly extends base struct 'Base':
!!! error TS8006:   Derived Struct 'Derived' cannot override base struct 'Base' member variable 'a'.
        a: typeof y; // error
        b(a: typeof y) { } // ok
        d: (a: typeof y) => void; // ok
    
        static r: typeof y; // ok
        static s(a: typeof y) { } // ok
        static u: (a: typeof y) => void; // ok
    
        constructor(a: typeof y) { super(x) }
    }
    
    
    /* struct Base2 {
        [i: string]: Object;
        [i: number]: typeof x;
    }
    
    struct Derived2 extends Base2 {
        [i: string]: typeof x;
        [i: number]: typeof y;
    }
    
    var d2: Derived2;
    var r7 = d2[''];
    var r8 = d2[1]; */
    
    